--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="/Images/Img-Keith.jpeg" weight="200" height="200" alt="Keith's Picture"></td>
+            <td><img src="Images/Img-Keith.jpeg" weight="200" height="200" alt="Keith's Picture"></td>
             <td>
                 <h1>Keith Loh</h1>
                 <p><em>Junior Programmer at <strong><a href="https://etacticsgroup.com/">Tao Web Services   </a></strong></em></p>
